# profile_matcher

./: .env.example  .gitignore  README  README.md  app.py  database.py  env.example  log.ini  main.py  pyproject.toml  ruff.toml
data_creator/: __init__.py  _initial_data_creator.py
profile_matcher/api/: __init__.py
profile_matcher/api/dependencies/: __init__.py  session.py
profile_matcher/api/models/: __init__.py  campaign.py  player_profile_response.py
profile_matcher/api/routes/: __init__.py  client_config.py  router.py
profile_matcher/api/routes/_client_config/: __init__.py  _get.py
profile_matcher/api/routes/client_config/: _get.py  _get_client_config.py  get_client_config.py
profile_matcher/core/database/models/: _player_profile.py  player_profile.py
profile_matcher/data_creator/: __init__.py  _initial_data_creator.py
profile_matcher/database/: __init__.py  _async_session_manager.py  _exception.py  async_session_manager.py
profile_matcher/database/data_creator/: _initial_data_creator.py
profile_matcher/database/models/: __init__.py  _player_profile.py
profile_matcher/session/: __init__.py  async_session_manager.py
profile_matcher/tests/: conftest.py
profile_matcher/tests/api/routes/client_config/: test_get_client_config.py
session/: __init__.py
